--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
+    "framer-motion": "^12.17.0",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.8.1",
-    "tailwind-merge": "2.5.4",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "react-hook-form": "^7.53.0"
+    "react-scroll-parallax": "^3.4.5",
+    "tailwind-merge": "2.5.4"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
